[package]
name = "injectiny_proc_macro"
version = "0.2.0"
authors = ["David Lenaerts <david.lenaerts@gmail.com>"]
license = "MIT"
description = "The proc_macro crate for injectiny"
edition = "2021"
keywords = ["dependency", "injection", "di", "ioc", "proc-macro"]
repository = "https://github.com/DerSchmale/injectiny"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"